--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "ansible.python.interpreterPath": "/usr/bin/python3.12"
+    "ansible.python.interpreterPath": "/usr/bin/python3.12",
+    "files.autoSave": "onFocusChange",
+    "editor.fontSize": 15
+    
+
 }
